NTTCS_CF_project/httpplatform-stdout_7572_2023630114021.log
Watching for file changes with StatReloader
[30/Jun/2023 13:40:28] "GET /mantenimiento/ HTTP/1.1" 200 2657
[30/Jun/2023 13:40:28] "GET /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12317
[30/Jun/2023 13:40:55] "GET / HTTP/1.1" 200 1768
[30/Jun/2023 13:40:58] "POST / HTTP/1.1" 200 1910
[30/Jun/2023 13:40:59] "GET /mantenimiento/ HTTP/1.1" 200 2657
[30/Jun/2023 13:41:00] "GET /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12317
[30/Jun/2023 13:41:03] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 70662
[30/Jun/2023 13:41:10] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12184
[30/Jun/2023 13:44:37] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12461
[30/Jun/2023 13:45:00] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12466
[30/Jun/2023 13:45:08] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 84103
[30/Jun/2023 13:45:17] "POST /MantenimientoMapeoMarcos/ HTTP/1.1" 200 12470
C:\Users\administrator\Documents\NTTCS_Control_Framework\NTTCS_CF_project\homepage\views.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 30, 2023 - 13:40:28
Django version 4.2.2, using settings 'NTTCS_CF_project.settings'
Starting development server at http://127.0.0.1:16001/
Quit the server with CTRL-BREAK.

Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\threading.py", line 1038, in _bootstrap_inner
    self.run()
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\threading.py", line 975, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\utils\autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\management\commands\runserver.py", line 133, in inner_run
    self.check(display_num_errors=True)
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\management\base.py", line 485, in check
    all_issues = checks.run_checks(
                 ^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\checks\registry.py", line 88, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\checks\urls.py", line 42, in check_url_namespaces_unique
    all_namespaces = _load_all_namespaces(resolver)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\core\checks\urls.py", line 61, in _load_all_namespaces
    url_patterns = getattr(resolver, "url_patterns", [])
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\utils\functional.py", line 57, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\urls\resolvers.py", line 715, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
                       ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\utils\functional.py", line 57, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\urls\resolvers.py", line 708, in urlconf_module
    return import_module(self.urlconf_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\administrator\Documents\NTTCS_Control_Framework\NTTCS_CF_project\NTTCS_CF_project\urls.py", line 22, in <module>
    path('', include('homepage.urls')),
             ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\urls\conf.py", line 38, in include
    urlconf_module = import_module(urlconf_module)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\administrator\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\administrator\Documents\NTTCS_Control_Framework\NTTCS_CF_project\homepage\urls.py", line 2, in <module>
    from . import views
  File "C:\Users\administrator\Documents\NTTCS_Control_Framework\NTTCS_CF_project\homepage\views.py", line 619
    elif request.POST.get('id') != None:
    ^^^^
SyntaxError: invalid syntax
